cmake_minimum_required(VERSION 3.10)
project(LintCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LintCode main.cpp String/P55.cpp String/P55.h String/P13.cpp String/P13.h String/P171.cpp String/P171.h other/P28.cpp other/P28.h String/P79.cpp String/P79.h String/P78.cpp String/P78.h Array/P172.cpp Array/P172.h Array/P138.cpp Array/P138.h main.h Array/P100.cpp Array/P100.h Array/P64.cpp Array/P64.h Array/P56.cpp Array/P56.h)