cmake_minimum_required(VERSION 3.10)
project(LintCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LintCode main.cpp String/P55.cpp String/P55.h String/P13.cpp String/P13.h String/P171.cpp String/P171.h other/P28.cpp other/P28.h String/P79.cpp String/P79.h String/P78.cpp String/P78.h Array/P172.cpp Array/P172.h Array/P138.cpp Array/P138.h main.h Array/P100.cpp Array/P100.h Array/P64.cpp Array/P64.h Array/P56.cpp Array/P56.h Array/P50.cpp Array/P50.h Array/P189.cpp Array/P189.h Array/P59.cpp Array/P59.h Array/P31.cpp Array/P31.h Array/P57.cpp Array/P57.h binSearch/P141.cpp binSearch/P141.h binSearch/P60.cpp binSearch/P60.h binSearch/P74.cpp binSearch/P74.h binSearch/P75.cpp binSearch/P75.h binSearch/P159.cpp binSearch/P159.h binSearch/P62.cpp binSearch/P62.h)